--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,31 @@ sysinfo.txt
 crashlytics-build.properties
 SwitchIL2CPPCache/il2cpp_cache/4F3553CB463B90C29E84191D654935E3.d
 
+Coctails/Coctail/Library/SourceAssetDB
+Coctails/Coctail/Library/ArtifactDB
+Coctails/Coctail/Library/ArtifactDB
+Coctails/Coctail/Library/SourceAssetDB
+Coctails/Coctail/Library/SourceAssetDB
+Coctails/Coctail/Library/shadercompiler-UnityShaderCompiler.exe7.log
+Coctails/Coctail/Library/shadercompiler-UnityShaderCompiler.exe6.log
+Coctails/Coctail/Library/shadercompiler-UnityShaderCompiler.exe5.log
+Coctails/Coctail/Library/shadercompiler-UnityShaderCompiler.exe4.log
+Coctails/Coctail/Library/shadercompiler-UnityShaderCompiler.exe3.log
+Coctails/Coctail/Library/shadercompiler-UnityShaderCompiler.exe2.log
+Coctails/Coctail/Library/shadercompiler-UnityShaderCompiler.exe1.log
+Coctails/Coctail/Library/shadercompiler-UnityShaderCompiler.exe0.log
+Coctails/Coctail/Library/ArtifactDB
+Coctails/Coctail/Library/ArtifactDB
+Coctails/Coctail/Library/CurrentLayout-default.dwlt
+Coctails/Coctail/Library/PackageCache/com.unity.ide.rider@1.1.4/package.json
+Coctails/Coctail/Library/shadercompiler-UnityShaderCompiler.exe0.log
+Coctails/Coctail/Library/shadercompiler-UnityShaderCompiler.exe1.log
+Coctails/Coctail/Library/shadercompiler-UnityShaderCompiler.exe2.log
+Coctails/Coctail/Library/shadercompiler-UnityShaderCompiler.exe3.log
+Coctails/Coctail/Library/shadercompiler-UnityShaderCompiler.exe4.log
+Coctails/Coctail/Library/shadercompiler-UnityShaderCompiler.exe5.log
+Coctails/Coctail/Library/shadercompiler-UnityShaderCompiler.exe6.log
+Coctails/Coctail/Library/shadercompiler-UnityShaderCompiler.exe7.log
+Coctails/Coctail/Library/SourceAssetDB
+Coctails/Coctail/Library/StateCache/Hierarchy/7ec869-mainStage.json
+Coctails/Coctail/Packages/packages-lock.json
