add to git ignor

--- a/.gitignore
+++ b/.gitignore
@@ -77,4 +77,4 @@ Coctails/Coctail/Library/shadercompiler-UnityShaderCompiler.exe6.log
 Coctails/Coctail/Library/shadercompiler-UnityShaderCompiler.exe7.log
 Coctails/Coctail/Library/SourceAssetDB
 Coctails/Coctail/Library/StateCache/Hierarchy/7ec869-mainStage.json
-Coctails/Coctail/Packages/packages-lock.json
+Coctails/Coctail/Library/ArtifactDB
